# temporary

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  project.yml  requirements.txt
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_ltdc_ex.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_i2s_ex.c  stm32f4xx_hal_sd.c
bootloader/inc/: main.h
bootloader/src/: bootloader.c  system_stm32f4xx.c
cmake/: gcc-arm-none-eabi.cmake
common/inc/: crc.h  flash.h  image.h  nextion.h  stm32f4xx_hal_conf.h
common/src/: crc.c  flash.c  nextion.c
core/inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
core/src/: image_header.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
linker/: app.ld  bootloader.ld  updater.ld
scripts/: merge_bootloader.py  patch_image_header.py
scripts/tools/: find_stm32cubeclt.py  gdbserver-wrapper.sh  memap.py
tests/: test_firmware_validator.c  test_nextion.c
tests/test/support/: fake_storage_backend.c  fake_storage_backend.h  memory_setup.c  memory_setup.h  stm32f407xx.h  stm32f4xx.h
updater/USB_HOST/App/: usb_host.c
updater/inc/: error_handler.h  firmware_validator.h  storage_api.h  storage_ch376_uart.h  storage_usb_otg.h  updater.h  updater_config.h
updater/src/: firmware_validator.c  image_header.c  storage_ch376_uart.c  storage_usb_otg.c  system_stm32f4xx.c  updater.c
